--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -30,7 +30,9 @@ jobs:
           cache: npm
           
       - name: Install dependencies
-        run: npm ci
+        run: |
+          rm -rf node_modules package-lock.json
+          npm install --legacy-peer-deps
         
       - name: Build website
         run: npm run build
