--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@docusaurus/preset-classic": "^3.8.1",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
-    "css-select": "^5.2.1",
+    "css-select": "~4.3.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -50,5 +50,8 @@
   },
   "engines": {
     "node": ">=20.0"
+  },
+  "overrides": {
+    "css-select": "~4.3.0"
   }
 }
